--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "webpack-dev-server": "^3"
   }
 }
